src/main/java/org/example/springsec/ecomm/error/DuplicatedRecordException.java
package org.example.springsec.ecomm.error;

public class DuplicatedRecordException extends RuntimeException {
    public DuplicatedRecordException(String message) {
        super(message);
    }
}
